Fixed CKCONSOLE on IE8.

--- a/dev/console/console.css
+++ b/dev/console/console.css
@@ -9,7 +9,7 @@ div.ckconsole {
 	right: 0;
 	bottom: 0;
 	overflow: auto;
-	background: #EEE;
+	background: #F8F8F8;
 	background: rgba(250,250,250,0.9);
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	z-index: 99999;
